Refactor/xml - primitive variables, variable naming * change Double to primitive double * change Integer to primitive int